--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "com.meta.xr.sdk.core": "72.0.0",
-    "com.meta.xr.sdk.platform": "72.0.0",
-    "com.meta.xr.simulator": "72.0.0",
+    "com.meta.xr.sdk.core": "77.0.0",
+    "com.meta.xr.sdk.platform": "77.0.0",
+    "com.meta.xr.simulator": "77.0.0",
     "com.unity.addressables": "1.22.3",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.burst": "1.8.18",
@@ -15,7 +15,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.4.0",
-    "com.unity.xr.oculus": "4.4.0",
+    "com.unity.xr.openxr": "1.13.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
